CSS aplicado a Registro y login

--- a/src/html/login.html
+++ b/src/html/login.html
@@ -40,7 +40,9 @@
                 <img src="../../images/restringido.png" class="rest">
                 <input type="submit" name="logear" value="Acceder">
             </form>
+            <div class="texto">
             <a href="../php/user-register/form-register.php" class="newUser">¿Nuevo usuario? Crea una cuenta nueva</a>
+            </div>
         </div>
 
     </body>
