--- a/src/html/login.html
+++ b/src/html/login.html
@@ -11,28 +11,8 @@
     <img src="../../images/logo.png" class="logo"  >
     <img src="../../images/mascota.png" class="mascota">
         
-
-    <!--<div class="propiedades">
-            <form action="" method="get">
-                <fieldset>
-                    <legend>Usuario</legend>
-                    <p>Nombre de Usuario: <input id="user" name="user" type="text" placeholder="Nombre de Usuario" required></p>
-                    <p>Contraseña: <input id="pass" name="pass" type="password" placeholder="Contraseña" minlength="8" required></p>
-                </fieldset>
-                <div class="buttons">
-                    <input type="checkbox"><label>Mantenme conectado</label>
-                    <input type="submit" name="logear" value="acceder">
-                </div>
-            </form>
-        </div>
-
-        <div class="mascota">
-            <footer>
-                 
-            </footer>
-        </div>-->
         <div class=bloque>
-            <form action="" method="get">
+            <form action="" method="POST" action="../php/accion_login.php">
                 <p class="encabezado">Inicio de sesión</p>
                 <input id="user" class="user" type="text" placeholder="Nombre de Usuario" required></p>
                 <img src="../../images/user.png" class="usuario">
